--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /x64/Debug
 /digital_recognition/x64/Debug
 /.vs/digital_recognition
+/docs/~$神经网络实现数字识别.mmap.~$lock
+/docs/~$神经网络实现数字识别.mmap.~$lock
